[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dblens"
version = "0.1.0"
description = "Database optimization insights CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
postgres  = ["psycopg2-binary"]
mysql     = ["mysql-connector-python"]
mongo     = ["pymongo"]
snowflake = ["snowflake-connector-python"]
all       = [
    "psycopg2-binary",
    "mysql-connector-python",
    "pymongo",
    "snowflake-connector-python",
]

[project.scripts]
dblens = "dblens.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dblens*"]